fixed error on mobile so visible even if scrolled

--- a/src/styles/components/_error.scss
+++ b/src/styles/components/_error.scss
@@ -1,5 +1,5 @@
 .error{
-    position: absolute;
+    position: fixed;
     width: 95%;
     top: 50%;
     left: 50%;
@@ -21,5 +21,18 @@
         float: right;
         font-size: 20px;
         cursor: pointer; 
+    }
+}
+
+@media all and (min-width: 1030px){
+    .error{
+        width: 80%;
+    }
+}
+
+@media all and (min-width: 1240px){
+    .error{
+        position: absolute;
+        width: 95%;
     }
 }
